# markov-chain-c

./: CMakeLists.txt  README.md  makefile  markov_chain.c  markov_chain.h  snakes_and_ladders.c  tweets_generator.c
